# LearnOpenGL

./: 3.3.shader.fs  3.3.shader.vs  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
src/: Shader.h  glad.c
